A lot of changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="container" id="box">
       <div class="mb-3">
-        <label for="" class="form-label">Write down your To-Do Mission</label>
+        <label for="" class="form-label">Write down your To-Do Missions</label>
         <input
           type="text"
           class="form-control"
