--- a/FE/index.html
+++ b/FE/index.html
@@ -41,7 +41,14 @@
           placeholder=""
         />
         <small id="helpId" class="form-text text-muted"></small>
-        <input type="submit" id="submitBtn" class="btn" value="Submit" />
+        <button
+          onclick="insertData(this)"
+          type="button"
+          id="submitBtn"
+          class="btn"
+        >
+          Submit
+        </button>
       </div>
     </div>
 
@@ -54,6 +61,7 @@
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
+    <script src="InsertToDoList.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
