--- a/FE/index.html
+++ b/FE/index.html
@@ -41,12 +41,7 @@
           placeholder=""
         />
         <small id="helpId" class="form-text text-muted"></small>
-        <button
-          onclick="insertData(this)"
-          type="button"
-          id="submitBtn"
-          class="btn"
-        >
+        <button onclick="insertData()" type="button" id="submitBtn" class="btn">
           Submit
         </button>
       </div>
