create lists box, add retrieve file

--- a/FE/index.html
+++ b/FE/index.html
@@ -44,6 +44,9 @@
         <button onclick="insertData()" type="button" id="submitBtn" class="btn">
           Submit
         </button>
+        <div class="container-fluid text-white" id="toDoBox">
+          <h1 id="listsText">Lists:</h1>
+        </div>
       </div>
     </div>
 
